[gd_scene load_steps=2 format=3 uid="uid://bnwh3ltkopbuh"]

[ext_resource type="Script" uid="uid://2q00rg6ke06i" path="res://Interface/GlobalInterface/Field/ReactiveProgressField.gd" id="1_c7kf5"]

[node name="ReactiveTextField" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 50.0
script = ExtResource("1_c7kf5")
__show_max_value = true
__max_value_divider = "/"
__test_current_value = ""
__test_max_value = ""
__linked_class = &""

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CurrentValue" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="ValueDivider" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "/"

[node name="MaxValue" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
